fixes #1974 adding nowrap to the title but still truncating it to max50char so that the title bar shows

--- a/angular_client/modules/spreadsheet/app/styles/main.css
+++ b/angular_client/modules/spreadsheet/app/styles/main.css
@@ -158,6 +158,7 @@ body {
   display: inline-block;
   vertical-align: top;
   text-align: left;
+  white-space: nowrap;
 }
 
 .clearDiv {
